--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,7 @@
 toml
 app = "n88n8"
 
-primary_region = "mia" 
-# Miami: la más cercana a México
+primary_region = "mia" # Miami: la más cercana a México
 
 [build]
   dockerfile = "Dockerfile"
